cmake_minimum_required(VERSION 3.15)

project(CXDoom
    VERSION 1.0
    LANGUAGES CXX)

if (NOT DEFINED CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
endif()

add_executable(
        src
        src/doomgeneric_main.cpp
        src/am_map.cpp
        src/doomdef.cpp
        src/doomstat.cpp
        src/dstrings.cpp
        src/d_event.cpp
        src/d_items.cpp
        src/d_iwad.cpp
        src/d_loop.cpp
        src/d_main.cpp
        src/d_mode.cpp
        src/d_net.cpp
        src/f_finale.cpp
        src/f_wipe.cpp
        src/g_game.cpp
        src/hu_lib.cpp
        src/hu_stuff.cpp
        src/info.cpp
        src/i_cdmus.cpp
        src/i_endoom.cpp
        src/i_joystick.cpp
        src/i_scale.cpp
        src/i_sound.cpp
        src/i_system.cpp
        src/i_timer.cpp
        src/memio.cpp
        src/m_argv.cpp
        src/m_bbox.cpp
        src/m_cheat.cpp
        src/m_config.cpp
        src/m_controls.cpp
        src/m_fixed.cpp
        src/m_menu.cpp
        src/m_misc.cpp
        src/m_random.cpp
        src/p_ceilng.cpp
        src/p_doors.cpp
        src/p_enemy.cpp
        src/p_floor.cpp
        src/p_inter.cpp
        src/p_lights.cpp
        src/p_map.cpp
        src/p_maputl.cpp
        src/p_mobj.cpp
        src/p_plats.cpp
        src/p_pspr.cpp
        src/p_saveg.cpp
        src/p_setup.cpp
        src/p_sight.cpp
        src/p_spec.cpp
        src/p_switch.cpp
        src/p_telept.cpp
        src/p_tick.cpp
        src/p_user.cpp
        src/r_bsp.cpp
        src/r_data.cpp
        src/r_draw.cpp
        src/r_main.cpp
        src/r_plane.cpp
        src/r_segs.cpp
        src/r_sky.cpp
        src/r_things.cpp
        src/sha1.cpp
        src/sounds.cpp
        src/statdump.cpp
        src/st_lib.cpp
        src/st_stuff.cpp
        src/s_sound.cpp
        src/tables.cpp
        src/v_video.cpp
        src/wi_stuff.cpp
        src/w_checksum.cpp
        src/w_file.cpp
        src/w_main.cpp
        src/w_wad.cpp
        src/z_zone.cpp
        src/w_file_stdc.cpp
        src/i_input.cpp
        src/i_video.cpp
        src/doomgeneric_xlib.cpp
)